fixed alignment on view profile pag

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -77,7 +77,7 @@
   text-align: center;
 }
 
-.view-profile {
+.profile {
   text-align: center;
 }
 
